Fix dialog overflowing the screen at the bottom bug

--- a/frontend/src/app/shared/backdrop/Backdrop.common.scss
+++ b/frontend/src/app/shared/backdrop/Backdrop.common.scss
@@ -12,7 +12,6 @@
     z-index: 15;
     visibility: hidden;
     opacity: 0;
-    pointer-events: all;
     background-color: transparent;
 }
 
